refactor: enforce nested academic record structure via validation constraints, update migrations, and enhance UI and test coverage